--- a/noknow/package.json
+++ b/noknow/package.json
@@ -4,10 +4,10 @@
     "url": "https://github.com/noknow-hub/pkg-css/issues"
   },
   "description": "CSS utilities",
-  "homepage": "https://github.com/noknow-hub/pkg-css/blob/noknow#readme",
+  "homepage": "https://github.com/noknow-hub/pkg-css/blob/main/noknow/README.md",
   "license": "MIT",
   "main": "index.js",
-  "name": "@noknow/css-noknow",
+  "name": "@noknow/css",
   "publishConfig": {
     "access": "public"
   },
@@ -20,5 +20,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
-  "version": "0.1.0"
+  "version": "0.1.2"
 }
