--- a/noknow-style/package.json
+++ b/noknow-style/package.json
@@ -4,21 +4,21 @@
     "url": "https://github.com/noknow-hub/pkg-css/issues"
   },
   "description": "CSS utilities",
-  "homepage": "https://github.com/noknow-hub/pkg-css/blob/main/noknow/README.md",
+  "homepage": "https://github.com/noknow-hub/pkg-css/blob/main/noknow-style/README.md",
   "license": "MIT",
   "main": "index.js",
-  "name": "@noknow/css",
+  "name": "@noknow/noknow-style",
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/noknow-hub/pkg-css.git",
-    "directory": "noknow"
+    "directory": "noknow-style"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
-  "version": "0.10.0"
+  "version": "0.1.0"
 }
